# Qt-App

./: .clang-tidy  .gitignore  CMakeLists.txt  Qt-App.pro  README.en.md  README.md  common.pri  libs.pri  vcpkg.json
aggregation/: CMakeLists.txt
apps/: CMakeLists.txt  apps.pro
apps/app/: CMakeLists.txt  app.pro  main.cc
cmake/: CMakeDebugInfo.cmake  CompilerSettings.cmake  InstallConfig.cmake  OutputDirectories.cmake  PlatformLibraries.cmake  QtSetup.cmake  QtTranslations.cmake  VcpkgToolchain.cmake  build_info.cmake  common.cmake  macOSDeploymentTarget.cmake  qt_utils.cmake  utils.cmake
core/: CMakeLists.txt  core.pro  corewidget.hpp
examples/: CMakeLists.txt  examples.pro
examples/i18n/: CMakeLists.txt  i18n.pro  main.cc
extensionsystem/: CMakeLists.txt  extensionsystem.pro  invoker.h  iplugin.h  optionsparser.h  plugindetailsview.cpp  pluginerrorview.cpp  pluginerrorview.h  pluginmanager.cpp  pluginmanager.h  pluginspec.cpp  pluginspec.h  pluginview.cpp  pluginview.h
gui/: CMakeLists.txt  camelcasecursor.cpp  camelcasecursor.h  categorysortfiltermodel.cpp  categorysortfiltermodel.h  commonwidget.cc  commonwidget.hpp  completinglineedit.cpp  completinglineedit.h  dialog.hpp  fancylineedit.cpp  fancylineedit.h  gui.pro  gui_global.hpp  historycompleter.cpp  historycompleter.h  itemviews.h  messbox.cpp  messbox.h  multitextcursor.cpp  multitextcursor.h  toolbutton.cc  toolbutton.hpp  treemodel.cpp  treemodel.h  waitwidget.cpp  waitwidget.h
packaging/: fonts.cmake  rename_packages.sh
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/coreplugin/: CMakeLists.txt  configwidget.cpp  configwidget.h  coreplugin.cpp  coreplugin.h  coreplugin.json  coreplugin.pro  mainwindow.cpp  mainwindow.h  plugindialog.h
plugins/tcpplugin/: CMakeLists.txt  tcpclient.cpp  tcpclient.h  tcpplugin.cc  tcpplugin.hpp  tcpplugin.json  tcpserver.cpp  tcpserver.h  tcpwidget.cpp  tcpwidget.h
resource/: CMakeLists.txt  resource.cc  resource.pro  resource.qrc  resource_global.hpp
resource/qss/: carshdialog.css  common.css  commonwidget.css
src/apps/app/: CMakeLists.txt  app.icns  app.pro  app.rc  main.cc
src/apps/crashreport/: CMakeLists.txt  app.icns  app.rc  crashreport.pro  crashwidgets.cc  crashwidgets.hpp  main.cc
src/extensionsystem/: CMakeLists.txt  extensionsystem.pro  invoker.cpp  invoker.h  iplugin.cpp  iplugin.h  plugindetailsview.cpp  plugindetailsview.h  pluginerroroverview.cpp  pluginerrorview.cpp  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.h  pluginspec_p.h  pluginview.cpp
src/gui/: CMakeLists.txt  camelcasecursor.cpp  commonwidget.cc  commonwidget.hpp  completinglineedit.cpp  dialog.cc  dialog.hpp  fancylineedit.cpp  fancylineedit.h  gui.pro  historycompleter.cpp  mainwidget.cc  mainwidget.hpp  messagebox.cpp  messagebox.h  messbox.cpp  messbox.h  multitextcursor.h  pushbutton.cc  pushbutton.hpp  treemodel.h  waitwidget.cpp  waitwidget.h
src/plugins/coreplugin/: CMakeLists.txt  configwidget.cpp  configwidget.h  coreplugin.cpp  coreplugin.h  coreplugin.hpp  coreplugin.json  coreplugin.pro  coreplugintr.h  icore.cpp  icore.h  mainwindow.cpp  mainwindow.h  plugindialog.cpp  plugindialog.h  themechooser.cpp  themechooser.h
src/plugins/hashplugin/: CMakeLists.txt  cpubenchthread.cc  cpubenchthread.hpp  hashplugin.cc  hashplugin.json  hashplugin.pro  hashthread.cc  hashthread.hpp  hashwidget.cc  hashwidget.hpp
src/plugins/serialplugin/: CMakeLists.txt  serialport.h  serialwidget.cpp  serialwidget.h
src/plugins/systeminfoplugin/: CMakeLists.txt  systeminfoplugin.cc  systeminfoplugin.hpp  systeminfoplugin.json  systeminfoplugin.pro  systeminfowidget.cc  systeminfowidget.hpp
src/resource/: CMakeLists.txt  resource.hpp  resource.pro  resource.qrc
src/resource/qss/: common.css  commonwidget.css  corewidget.css  mainwidget.css  sidebarbutton.css  specific.css
src/solutions/spinner/: CMakeLists.txt  spinner.pro
src/solutions/tasking/: CMakeLists.txt  barrier.h  concurrentcall.h  networkquery.cpp  tasking.pro
src/utils/: CMakeLists.txt  algorithm.h  appdata.hpp  appinfo.cc  appinfo.h  appinfo.hpp  async.h  benchmarker.h  camelcasecursor.h  categorysortfiltermodel.h  commandline.cpp  commandline.h  completinglineedit.h  countdownlatch.cc  devicefileaccess.cpp  devicefileaccess.h  elidinglabel.h  environment.h  execmenu.h  faketooltip.h  fancylineedit.cpp  fancylineedit.h  filepath.cpp  filepath.h  filestreamer.h  filestreamermanager.h  fileutils.h  futuresynchronizer.h  guard.h  guiutils.cpp  guiutils.h  historycompleter.h  hostosinfo.h  icon.cpp  icon.h  icondisplay.h  id.cpp  id.h  indexedcontainerproxyconstiterator.h  infolabel.cpp  (+53 more)
src/utils/fsengine/: fileiconprovider.h  fsengine.h  fsengine.pri
src/utils/mimetypes/: mimedatabase.cpp  mimeglobpattern.cpp  mimemagicrule_p.h  mimemagicrulematcher_p.h  mimeprovider.cpp  mimeprovider_p.h  mimetype.h  mimetypeparser.cpp  mimeutils.cpp
src/utils/mimetypes2/: mimedatabase.cpp  mimemagicrule_p.h  mimeprovider.cpp  mimetype.h
src/utils/theme/: theme.h  theme.pri  theme_p.h
src/utils/tooltip/: tooltip.h  tooltip.pri
src/widgets/: CMakeLists.txt  dialog.cc  dialog.hpp  mainwidget.cc  mainwidget.hpp  messagebox.cpp  messagebox.h  pushbutton.cc  pushbutton.hpp  waitwidget.cpp  waitwidget.h  widgets.pro  widgets_global.hpp
tests/breakpadtest/: CMakeLists.txt  breakpadtest.pro  main.cc
tests/crashpadtest/: CMakeLists.txt  crashpadtest.pro  main.cc
utils/: CMakeLists.txt  algorithm.h  benchmarker.cpp  countdownlatch.cc  countdownlatch.hpp  executeondestruction.h  hostosinfo.cpp  hostosinfo.h  indexedcontainerproxyconstiterator.h  languageconfig.cc  languageconfig.hpp  logasync.cpp  mimeutils.h  osspecificaspects.h  qtcassert.cpp  qtcassert.h  qtcsettings.h  stringutils.cpp  stringutils.h  utils.cpp  utils.h  utils.pro
utils/mimetypes/: mimedatabase.h  mimedatabase_p.h  mimeglobpattern_p.h  mimemagicrule.cpp  mimemagicrule_p.h  mimemagicrulematcher.cpp  mimeprovider.cpp  mimetype.cpp  mimetype.h  mimetypeparser.cpp  mimetypeparser_p.h  mimetypes.pri  mimeutils.cpp
(+140 files in other folders)
