set(PROJECT_SOURCES main.cc)
qt_add_executable(I18N MANUAL_FINALIZATION ${PROJECT_SOURCES})
set_target_properties(I18N PROPERTIES WIN32_EXECUTABLE TRUE)
set_runtime_to_archive_dir(I18N "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples")
target_link_libraries(I18N PRIVATE Qt::Core)
qt_finalize_executable(I18N)
